Refactored HealthGraphClient into AccessTokenManager.  Added Users service wrapper to retrieve Uris for a user.

--- a/HealthGraphNet.Samples/HealthGraphNet.Samples.Web/Web.config
+++ b/HealthGraphNet.Samples/HealthGraphNet.Samples.Web/Web.config
@@ -2,9 +2,9 @@
 
 <configuration>
 	<appSettings>
-        <add key="ClientId" value="" />
-        <add key="ClientSecret" value="" />
-        <add key="RequestUri" value="" />
+        <add key="ClientId" value="48bcaf79131244a49d238721f3c0b78b" />
+        <add key="ClientSecret" value="d494de44e8074f21860149a28db1f7ef" />
+        <add key="RequestUri" value="http://healthgraphnet.azurewebsites.net/" />
     </appSettings>
     
   <system.web>
