Added some new models associated with the activities endpoint.

--- a/HealthGraphNet/HealthGraphNet.csproj
+++ b/HealthGraphNet/HealthGraphNet.csproj
@@ -41,6 +41,11 @@
   <ItemGroup>
     <Compile Include="Endpoints\ISettingsEndpoint.cs" />
     <Compile Include="Endpoints\SettingsEndpoint.cs" />
+    <Compile Include="Models\CaloriesModel.cs" />
+    <Compile Include="Models\DistanceModel.cs" />
+    <Compile Include="Models\HeartRateModel.cs" />
+    <Compile Include="Models\ImageModel.cs" />
+    <Compile Include="Models\PathModel.cs" />
     <Compile Include="Models\ProfileModel.cs" />
     <Compile Include="Models\SettingsModel.cs" />
     <Compile Include="RestSharp\OAuth2RequestHeaderAuthenticator.cs" />
