--- a/HealthGraphNet/HealthGraphNet.csproj
+++ b/HealthGraphNet/HealthGraphNet.csproj
@@ -40,13 +40,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Endpoints\FitnessActivitiesEndpoint.cs" />
-    <Compile Include="Endpoints\IFitnessActivitiesEndpoint.cs" />
-    <Compile Include="Endpoints\ISettingsEndpoint.cs" />
+    <Compile Include="Endpoints\Interfaces\IFitnessActivitiesEndpoint.cs" />
+    <Compile Include="Endpoints\Interfaces\IProfileEndpoint.cs" />
+    <Compile Include="Endpoints\Interfaces\ISettingsEndpoint.cs" />
+    <Compile Include="Endpoints\Interfaces\IUsersEndpoint.cs" />
     <Compile Include="Endpoints\SettingsEndpoint.cs" />
     <Compile Include="Models\FitnessActivitiesFeedItemModel.cs" />
     <Compile Include="Models\CaloriesModel.cs" />
     <Compile Include="Models\DistanceModel.cs" />
-    <Compile Include="Models\FitnessActivitiesFeedPageModel.cs" />
+    <Compile Include="Models\FitnessActivitiesFeedModel.cs" />
     <Compile Include="Models\FitnessActivitiesModel.cs" />
     <Compile Include="Models\HeartRateModel.cs" />
     <Compile Include="Models\ImageModel.cs" />
@@ -60,8 +62,6 @@
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AccessTokenManagerBase.cs" />
-    <Compile Include="Endpoints\IProfileEndpoint.cs" />
-    <Compile Include="Endpoints\IUsersEndpoint.cs" />
     <Compile Include="Endpoints\ProfileEndpoint.cs" />
     <Compile Include="Endpoints\UsersEndpoint.cs" />
     <Compile Include="RestSharp\Validate.cs" />
