--- a/HealthGraphNet/HealthGraphNet.csproj
+++ b/HealthGraphNet/HealthGraphNet.csproj
@@ -49,11 +49,13 @@
     <Compile Include="Endpoints\Interfaces\IProfileEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IRecordsEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\ISettingsEndpoint.cs" />
+    <Compile Include="Endpoints\Interfaces\ISleepEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IStreetTeamEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IUsersEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IWeightEndpoint.cs" />
     <Compile Include="Endpoints\RecordsEndpoint.cs" />
     <Compile Include="Endpoints\SettingsEndpoint.cs" />
+    <Compile Include="Endpoints\SleepEndpoint.cs" />
     <Compile Include="Endpoints\StreetTeamEndpoint.cs" />
     <Compile Include="Endpoints\WeightEndpoint.cs" />
     <Compile Include="Models\CommentThreads\CommentsModel.cs" />
@@ -76,6 +78,8 @@
     <Compile Include="Models\FeedModel.cs" />
     <Compile Include="Models\Sleep\SleepFeedItemModel.cs" />
     <Compile Include="Models\Sleep\SleepModelBase.cs" />
+    <Compile Include="Models\Sleep\SleepNewModel.cs" />
+    <Compile Include="Models\Sleep\SleepPastModel.cs" />
     <Compile Include="Models\Sleep\SleepType.cs" />
     <Compile Include="Models\StreetTeam\StreetTeamFeedItemModel.cs" />
     <Compile Include="Models\StreetTeam\StreetTeamInvitationsModel.cs" />
