--- a/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
+++ b/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit\AccessTokenManagerBaseStub.cs" />
+    <Compile Include="Unit\Endpoints\BackgroundActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\FitnessActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\NutritionEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\ProfileEndpointTest.cs" />
