--- a/HealthGraphNet/HealthGraphNet.csproj
+++ b/HealthGraphNet/HealthGraphNet.csproj
@@ -42,8 +42,10 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Endpoints\BackgroundActivitiesEndpoint.cs" />
     <Compile Include="Endpoints\CommentThreadsEndpoint.cs" />
     <Compile Include="Endpoints\FitnessActivitiesEndpoint.cs" />
+    <Compile Include="Endpoints\Interfaces\IBackgroundActivitiesEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\ICommentThreadsEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IFitnessActivitiesEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\INutritionEndpoint.cs" />
@@ -64,6 +66,8 @@
     <Compile Include="Endpoints\WeightEndpoint.cs" />
     <Compile Include="Models\BackgroundActivities\BackgroundActivitiesFeedItemModel.cs" />
     <Compile Include="Models\BackgroundActivities\BackgroundActivitiesModelBase.cs" />
+    <Compile Include="Models\BackgroundActivities\BackgroundActivitiesNewModel.cs" />
+    <Compile Include="Models\BackgroundActivities\BackgroundActivitiesPastModel.cs" />
     <Compile Include="Models\BackgroundActivities\BackgroundActivitiesType.cs" />
     <Compile Include="Models\CommentThreads\CommentsModel.cs" />
     <Compile Include="Models\CommentThreads\CommentsNewModel.cs" />
