Finished adding support for GeneralMeasurementsEndpoint (including associated unit tests).

--- a/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
+++ b/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Unit\AccessTokenManagerBaseStub.cs" />
     <Compile Include="Unit\Endpoints\BackgroundActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\FitnessActivitiesEndpointTest.cs" />
+    <Compile Include="Unit\Endpoints\GeneralMeasurementsEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\NutritionEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\ProfileEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\SettingsEndpointTest.cs" />
