--- a/HealthGraphNet/HealthGraphNet.csproj
+++ b/HealthGraphNet/HealthGraphNet.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Endpoints\BackgroundActivitiesEndpoint.cs" />
     <Compile Include="Endpoints\CommentThreadsEndpoint.cs" />
     <Compile Include="Endpoints\FitnessActivitiesEndpoint.cs" />
+    <Compile Include="Endpoints\GeneralMeasurementsEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IBackgroundActivitiesEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\ICommentThreadsEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IFitnessActivitiesEndpoint.cs" />
+    <Compile Include="Endpoints\Interfaces\IGeneralMeasurementsEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\INutritionEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IProfileEndpoint.cs" />
     <Compile Include="Endpoints\Interfaces\IRecordsEndpoint.cs" />
@@ -79,7 +81,10 @@
     <Compile Include="Models\FitnessActivities\FitnessActivitiesNewModel.cs" />
     <Compile Include="Models\FitnessActivities\HeartRateModel.cs" />
     <Compile Include="Models\FitnessActivities\ImageModel.cs" />
+    <Compile Include="Models\GeneralMeasurements\GeneralMeasurementsFeedItemModel.cs" />
     <Compile Include="Models\GeneralMeasurements\GeneralMeasurementsModelBase.cs" />
+    <Compile Include="Models\GeneralMeasurements\GeneralMeasurementsNewModel.cs" />
+    <Compile Include="Models\GeneralMeasurements\GeneralMeasurementsPastModel.cs" />
     <Compile Include="Models\GeneralMeasurements\GeneralMeasurementsType.cs" />
     <Compile Include="Models\IFeedModelItem.cs" />
     <Compile Include="Models\FitnessActivities\IFitnessActivitiesModel.cs" />
